# maths

./: CMakeLists.txt  polynomial.cpp  polynomial.hpp  polynomial_tests.cpp  utils.hpp  utils_tests.cpp
